--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   align-items: center;
   flex-direction: column;
   font-family: "Nunito", sans-serif;
-  background-image: linear-gradient(90deg, #410076, #8820dd);
+  background-image: linear-gradient(90deg, #e6e1eb, #8b8590);
 }
 body {
   padding: 0;
