--- a/src/App.css
+++ b/src/App.css
@@ -4,99 +4,85 @@ body, h1, p {
   padding: 0;
 }
 
-/* Define styles for the container */
 .container {
   align-items: center;
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  font-family: "Nunito", sans-serif; /* Use Nunito font for the entire container */
+  font-family: "Nunito", sans-serif; 
   background-color: #f0f0f0;
   border-radius: 10px; /* Add rounded corners to the container */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Add a subtle box shadow */
 }
 
 
-/* Style the heading */
 h1 {
   font-size: 24px;
   color: #333;
   margin-bottom: 10px;
 }
 
-/* Style the car name and model */
 .car-info {
   font-size: 18px;
   color: #007bff;
   margin-bottom: 10px;
 }
 
-/* Style the description */
 .description {
   font-size: 16px;
   color: #444;
   margin-bottom: 10px;
 }
 
-/* Style the features */
 .features {
   font-size: 16px;
   color: #555;
   margin-bottom: 10px;
 }
 
-/* Style the mileage */
 .mileage {
   font-size: 16px;
   color: #555;
   margin-bottom: 10px;
 }
 
-/* Style links */
 a {
   color: #007bff;
   text-decoration: none;
 }
 
-/* Hover effect for links */
 a:hover {
   text-decoration: underline;
 }
 
-/* Background styles for the app */
 .App {
   width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center; /* Center the content vertically and horizontally */
+  justify-content: center; 
   background-image: linear-gradient(90deg, #e6e1eb, #8b8590);
-  padding: 20px; /* Add padding to center content */
+  padding: 20px; 
 }
 
-/* Style for the container that wraps both the search bar and car entries */
 .container {
   position: relative;
 }
 
-/* Style for the search bar container */
 .search-bar-container {
   position: absolute;
-  top: 40px; /* Adjust the top offset as needed */
+  top: 40px; 
   left: 50%;
   transform: translateX(-50%);
-  /* Additional styling for the search bar container */
 }
 
-/* Style for the car entries container */
 .car-entries-container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); /* Adjust the number of columns as needed */
-  grid-gap: 20px; /* Add spacing between entries */
-  margin-top: 100px; /* Adjust the top margin to ensure space below the search bar */
+  grid-template-columns: repeat(5, 1fr); 
+  grid-gap: 20px;
+  margin-top: 100px; 
 }
 
-/* Style for each car entry (table cell) */
 .car-entry {
   border: 1px solid #ccc;
   padding: 10px;
